--- a/src/style.scss
+++ b/src/style.scss
@@ -164,6 +164,7 @@ body {
     font-size: 26px;
     font-weight: 500;
     text-align: center;
+    word-break: break-all;
     @include sm {
       padding-top: 40px;
       line-height: 30px;
