fix exports, components names, router

--- a/src/style.scss
+++ b/src/style.scss
@@ -149,29 +149,6 @@ body {
   padding: 0 20px;
 }
 
-.converter {
-  &__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-    @include sm {
-      height: 100%;
-    }
-  }
-  &__result {
-    padding-top: 75px;
-    font-size: 26px;
-    font-weight: 500;
-    text-align: center;
-    word-break: break-all;
-    @include sm {
-      padding-top: 40px;
-      line-height: 30px;
-    }
-  }
-}
-
 .title {
   text-align: center;
   padding: 70px 0 100px;
@@ -251,184 +228,9 @@ body {
   }
 }
 
-.header {
-  &__container {
-    height: 40px;
-    display: flex;
-    align-items: center;
-    gap: 15px;
-  }
-  &__link {
-    color: $black;
-    font-weight: 600;
-    font-size: 16px;
-    padding-bottom: 3px;
-    border-bottom: 1px solid transparent;
-    &:hover {
-      color: $success;
-      border-bottom: 1px solid $success;
-    }
-    &.active {
-      color: $success;
-      border-bottom: 1px solid $success;
-    }
-  }
-}
-
-.exchange-rates {
-  overflow: hidden;
-  height: 100vh;
-  padding-bottom: 50px;
-  &__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-    overflow: hidden;
-  }
-  &__title {
-    padding: 30px 0 45px;
-  }
-  &__body {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    padding-bottom: 60px;
-    @include lg {
-      display: flex;
-      flex-direction: column-reverse;
-      gap: 20px;
-      max-width: 400px;
-    }
-    @include sm {
-      padding-bottom: 80px;
-    }
-  }
-  &__list {
-    height: 100%;
-    width: 100%;
-    max-width: 400px;
-    text-align: center;
-    margin: 0 auto;
-    overflow-y: auto;
-    padding-right: 4px;
-    .currency:nth-child(odd) {
-      background: lighten($success, 55%);
-    }
-    &::-webkit-scrollbar {
-      width: 10px;
-    }
-    &::-webkit-scrollbar-track {
-      background: $light-gray;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background-color: $secondary;
-      border-radius: 20px;
-      border: 2px solid $light-gray;
-    }
-  }
-}
-
-.currency {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 40px;
-  padding: 0 20px;
-  font-weight: 600;
-  border-radius: 8px;
-}
-
-.select-wrapper {
-  position: absolute;
-  top: 0;
-  right: 5%;
-  @include lg {
-    position: relative;
-    // margin: 0 auto;
-    align-self: flex-end;
-  }
-}
-
-.select {
-  position: relative;
-  &__label {
-    min-width: 220px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 5px;
-    font-weight: 500;
-    span {
-      color: $success;
-      border-bottom: 1px solid $success;
-    }
-  }
-  &__icon {
-    height: 12px;
-    width: 12px;
-    &.open {
-      transform: rotate(180deg);
-    }
-  }
-  &__popup {
-    background: $white;
-    position: absolute;
-    z-index: 1;
-    right: 0px;
-    top: 30px;
-    border-radius: 8px;
-    box-shadow: 1px 1px 5px #afafaf;
-    overflow: hidden;
-  }
-  &__link {
-    padding: 5px 40px;
-    font-weight: 500;
-    cursor: pointer;
-    &.active {
-      background: lighten($success, 50%);
-    }
-    &:hover {
-      background: lighten($success, 50%);
-    }
-  }
-}
-
-.lds-hourglass {
-  display: inline-block;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 80px;
-  height: 80px;
-  &:after {
-    content: ' ';
-    display: block;
-    border-radius: 50%;
-    width: 0;
-    height: 0;
-    margin: 8px;
-    box-sizing: border-box;
-    border: 32px solid $success;
-    border-color: $success transparent $success transparent;
-    animation: lds-hourglass 1.2s infinite;
-  }
-}
-
-@keyframes lds-hourglass {
-  0% {
-    transform: rotate(0);
-    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  }
-  50% {
-    transform: rotate(900deg);
-    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-  }
-  100% {
-    transform: rotate(1800deg);
-  }
-}
+@import './pages/converter/converter.scss';
+@import './pages/exchangeRates/exchangeRates.scss';
+@import './components/currencyItem/currencyItem.scss';
+@import './components/header/header.scss';
+@import './components/loader/loader.scss';
+@import './components/select/select.scss';
